--- a/coffee-house/index.css
+++ b/coffee-house/index.css
@@ -17,6 +17,7 @@ a {
 }
 
 button {
+  padding: 0;
   border: none;
 }
 button:hover {
@@ -28,6 +29,66 @@ button:focus {
 
 img {
   vertical-align: bottom;
+}
+
+/*General*/
+.wrapper {
+  max-width: 1440px;
+  padding: 0 40px;
+  margin: 0 auto;
+  box-sizing: border-box;
+}
+
+/*Header*/
+.nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.nav__logo {
+  flex-basis: 100px;
+  height: 60px;
+  background-image: url(img/header_and_footer/logo.svg);
+}
+.nav-list {
+  flex-basis: 456px;
+  list-style-type: none;
+  display: flex;
+  justify-content: space-between;
+}
+.nav-list__item {
+  cursor: default;
+}
+.nav-list__item, .nav__btn-menu {
+  font-weight: 600;
+  color: #403F3D;
+  position: relative;
+}
+.nav-list__item:hover::after, .nav-list__item:focus::after, .nav__btn-menu:hover::after, .nav__btn-menu:focus::after {
+  transform: scaleX(1);
+  opacity: 1;
+}
+.nav-list__item::after, .nav__btn-menu::after {
+  position: absolute;
+  pointer-events: none;
+  transition: transform 0.5s, opacity 0.5s;
+  content: "";
+  display: block;
+  width: 100%;
+  height: 2px;
+  background-color: #403F3D;
+  transform: scaleX(0);
+  opacity: 0;
+}
+.nav__btn-menu {
+  cursor: pointer;
+}
+.nav__btn-menu-icon {
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  background-image: url(img/header_and_footer/coffee-cup.svg);
+  vertical-align: top;
 }
 
 /*italic*/
