--- a/coffee-house/index.scss
+++ b/coffee-house/index.scss
@@ -16,6 +16,7 @@ a {
 	text-decoration: none;
 }
 button {
+	padding: 0;
 	border:none;
 	&:hover {
 		cursor: pointer;
@@ -27,7 +28,72 @@ button {
 img {
 	vertical-align: bottom;
 }
-
+/*General*/
+.wrapper {
+	max-width: 1440px;
+	padding: 0 40px;
+	margin: 0 auto;
+	box-sizing: border-box;
+}
+/*Header*/
+.nav {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	//flex-wrap: wrap;
+	//margin-bottom: 600px;
+	&__logo {
+		flex-basis: 100px;
+		height: 60px;
+		background-image: url(img/header_and_footer/logo.svg);
+	}
+	&-list {
+		flex-basis: 456px; //117 + 40 + 48 + 40 + 86 + 40 + 85
+		list-style-type: none;
+		display: flex;
+		justify-content: space-between;
+		//flex-wrap: wrap;
+		//text-align: center;
+		&__item {
+			cursor: default;
+		}
+	}
+	&-list__item, &__btn-menu {
+		font-weight: 600;
+		color: $text-dark;
+		position: relative; //useless, just need for absolute
+		&:hover, &:focus{
+			&::after{
+				transform: scaleX(1);
+				opacity: 1;
+			}
+		}
+		&::after{
+			position: absolute; //useless, pointer-events not working without this
+			pointer-events: none;
+			transition: transform 0.5s, opacity 0.5s;
+			content: '';
+			display: block;
+			width: 100%;
+			height: 2px;
+			background-color: $text-dark;
+			transform: scaleX(0);
+			opacity: 0;
+		}
+	}
+	&__btn-menu {
+		//line-height: 1.5; //need for button
+		//background-color: transparent; //need for button
+		cursor: pointer;
+		&-icon{
+			display: inline-block;
+			width: 20px;
+			height: 20px;
+			background-image: url(img/header_and_footer/coffee-cup.svg);
+			vertical-align: top;
+		}
+	}
+}
 /*italic*/
 /*font-variation-settings: 'slnt' 10; */
 /* font-variation-settings: 'ital' 1;*/
