--- a/coffee-house/variables.scss
+++ b/coffee-house/variables.scss
@@ -1,5 +1,7 @@
 $text-light: #E1D4C9;
 $text-dark: #403F3D;
+$text-accent: #B0907A;
+
 $headerscolor: #44444f;
 $subheaderscolor: #65e496;
 $whitecolor: #ffffff;
