--- a/coffee-house/variables.scss
+++ b/coffee-house/variables.scss
@@ -1,6 +1,8 @@
 $text-light: #E1D4C9;
 $text-dark: #403F3D;
 $text-accent: #B0907A;
+$border-dark: #665F55;
+$border-light: #C1B6AD;
 
 $headerscolor: #44444f;
 $subheaderscolor: #65e496;
