--- a/coffee-house/index.css
+++ b/coffee-house/index.css
@@ -19,6 +19,8 @@ a {
 button {
   padding: 0;
   border: none;
+  line-height: 1;
+  background-color: transparent;
 }
 button:hover {
   cursor: pointer;
@@ -55,6 +57,7 @@ img {
   list-style-type: none;
   display: flex;
   justify-content: space-between;
+  transform: translate(-2px, -2px);
 }
 .nav-list__item {
   cursor: default;
@@ -82,6 +85,7 @@ img {
 }
 .nav__btn-menu {
   cursor: pointer;
+  transform: translate(-4px, -2px);
 }
 .nav__btn-menu-icon {
   display: inline-block;
@@ -89,9 +93,14 @@ img {
   height: 20px;
   background-image: url(img/header_and_footer/coffee-cup.svg);
   vertical-align: top;
+  transform: translateX(5px);
 }
 
 /*Mainbox*/
+.mainbox {
+  margin-top: 20px;
+  border-radius: 40px;
+}
 .mainbox-desc {
   max-width: 518px;
   margin-left: 101px;
@@ -118,9 +127,12 @@ img {
   border-radius: 100px;
   position: relative;
   transition: padding 0.5s;
+  transform: translateX(-1px);
+  padding-left: 79px;
 }
 .mainbox-desc__btn:hover, .mainbox-desc__btn:focus {
   padding: 20px 88px 20px 68px;
+  padding-left: 69px;
 }
 .mainbox-desc__btn:hover::after, .mainbox-desc__btn:focus::after {
   opacity: 1;
@@ -128,7 +140,7 @@ img {
 .mainbox-desc__btn::after {
   transition: opacity 0.5s;
   position: absolute;
-  left: 119px;
+  left: 120px;
   content: url(img/header_and_footer/coffee-cup.svg);
   display: inline-block;
   width: 20px;
@@ -137,16 +149,103 @@ img {
   opacity: 0;
 }
 
+/*Favorite-coffee*/
+.favorite-coffee {
+  margin-top: 100px;
+  position: relative;
+}
+.favorite-coffee__title {
+  text-align: center;
+  font-size: 60px;
+  font-weight: 600;
+  line-height: 1.25;
+  margin-bottom: 40px;
+  color: #403F3D;
+}
+.favorite-coffee__subtitle {
+  color: #B0907A;
+  font-variation-settings: "slnt" -10;
+}
+
+.slider {
+  max-width: 480px;
+  margin: 0 auto;
+}
+.slider-item {
+  display: none;
+  text-align: center;
+  color: #403F3D;
+}
+.slider-item__pic {
+  width: 480px;
+}
+.slider-item__type {
+  margin: 21px 0 15px;
+}
+.slider-item__price {
+  margin: 17px 0 39px;
+}
+.slider-item__type, .slider-item__price {
+  font-size: 24px;
+  font-weight: 600;
+  line-height: 1.25;
+}
+.slider-item--active {
+  display: block;
+}
+.slider-controls {
+  list-style-type: none;
+  display: flex;
+  justify-content: space-between;
+  max-width: 144px;
+  margin: 0 auto;
+}
+.slider-controls__item {
+  background-color: #C1B6AD;
+  width: 40px;
+  height: 4px;
+  border-radius: 100px;
+}
+.slider-controls__item--active {
+  background-color: #665F55;
+}
+.slider__btn-left, .slider__btn-right {
+  height: 60px;
+  position: absolute;
+  top: 405px;
+}
+.slider__btn-left svg, .slider__btn-right svg {
+  fill: transparent;
+  transition: fill 0.5s;
+}
+.slider__btn-left svg rect, .slider__btn-right svg rect {
+  stroke: #665F55;
+}
+.slider__btn-left svg path, .slider__btn-right svg path {
+  stroke: #403F3D;
+  transition: stroke 0.5s;
+}
+.slider__btn-left:hover svg, .slider__btn-right:hover svg {
+  fill: #665F55;
+}
+.slider__btn-left:hover svg path, .slider__btn-right:hover svg path {
+  stroke: #E1D4C9;
+}
+.slider__btn-left {
+  left: 4px;
+}
+.slider__btn-right {
+  right: 4px;
+}
+
 /*Block-pages*/
 .header {
   padding: 20px 40px 0;
 }
 
 .mainbox {
-  margin-top: 20px;
   padding: 100px 0;
   background-image: url(img/main/hero.jpg);
-  border-radius: 40px;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: 0px -30px;
