--- a/coffee-house/index.scss
+++ b/coffee-house/index.scss
@@ -1,99 +1,7 @@
 @import "variables";
-/*Tags*/
-body {
-	font-family: 'Inter', sans-serif;
-	font-size: 16px;
-	line-height: 1.5;
-	font-weight: 400;
-	color: $text-light;
-}
-h1, h2, h3, h4, h5, h6, ul, p {
-	padding: 0;
-	margin: 0;
-}
-a {
-	text-decoration: none;
-}
-button {
-	padding: 0;
-	border:none;
-	&:hover {
-		cursor: pointer;
-	}
-	&:focus {
-		outline: none;
-	}
-	line-height: 1;
-	background-color: transparent;
-}
-img {
-	vertical-align: bottom;
-}
-/*General*/
-.wrapper {
-	max-width: 1440px;
-	padding: 0 40px;
-	margin: 0 auto;
-	box-sizing: border-box;
-}
-/*Header*/
-.nav {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	//flex-wrap: wrap;
-	&__logo {
-		flex-basis: 100px;
-		height: 60px;
-		background-image: url(img/header_and_footer/logo.svg);
-	}
-	&-list {
-		flex-basis: 456px; //117 + 40 + 48 + 40 + 86 + 40 + 85
-		list-style-type: none;
-		display: flex;
-		justify-content: space-between;
-		//flex-wrap: wrap;
-		transform: translate(-2px, -2px);
-		cursor: pointer;
-	}
-	&-list__item, &__btn-menu {
-		font-weight: 600;
-		color: $text-dark;
-		position: relative; //useless, just need for absolute
-		&:hover, &:focus{
-			&::after{
-				transform: scaleX(1);
-				opacity: 1;
-			}
-		}
-		&::after{
-			position: absolute; //useless, pointer-events not working without this
-			pointer-events: none;
-			transition: transform 0.5s, opacity 0.5s;
-			content: '';
-			display: block;
-			width: 100%;
-			height: 2px;
-			background-color: $text-dark;
-			transform: scaleX(0);
-			opacity: 0;
-		}
-	}
-	&__btn-menu {
-		cursor: pointer;
-		transform: translate(-4px, -2px);
-		&-icon{
-			display: inline-block;
-			width: 20px;
-			height: 20px;
-			background-image: url(img/header_and_footer/coffee-cup.svg);
-			vertical-align: top;
-			transform: translateX(5px);
-		}
-	}
-}
-
-/*Mainbox*/
+@import "base";
+@import "header";
+@import "footer";
 .mainbox {
 	margin-top: 20px;
 	border-radius: 40px;
@@ -108,7 +16,6 @@ img {
 		}
 		&__subtitle {
 			color: $text-accent;
-			//не italic, надо читать статью про переменные шрифты https://web.dev/articles/variable-fonts?hl=ru
 			font-variation-settings: 'slnt' -10;
 		}
 		&__text {
@@ -147,7 +54,6 @@ img {
 	}
 }
 
-/*Favorite-coffee*/
 .favorite-coffee {
 	position: relative;
 	&__title {
@@ -207,11 +113,6 @@ img {
 			height: 60px;
 			position: absolute;
 			top: 505px;
-			//border: 1px solid $border-dark; //можно через div сделать, чтобы при ховере углы не были доступны для клика, ведь они скруглены
-			//border-radius: 100%;
-			//svg {
-				//padding: 17px;
-			//}
 			svg {
 				fill: transparent;
 				transition: fill 0.5s;
@@ -239,7 +140,6 @@ img {
 	}
 }
 
-/*About*/
 .about {
 	&__title {
 		font-size: 60px;
@@ -299,7 +199,6 @@ img {
 	}
 }
 
-/*Mobile*/
 .mobile-app {
 	display: flex;
 	justify-content: space-between;
@@ -350,134 +249,16 @@ img {
 	}
 }
 
-/*Footer*/
-.footerbox {
-	display: flex;
-	justify-content: space-between;
-	background-color: $border-dark;
-	box-sizing: content-box;
-	padding: 100px 100px 94px;
-	border-radius: 40px;
-	&-desc {
-		flex-basis: 530px;
-		&__title {
-			font-size: 60px;
-			font-weight: 600;
-			line-height: 1.25;
-			color: $text-light;
-			margin-bottom: 40px;
-		}
-		&__subtitle {
-			color: $text-accent;
-			font-variation-settings: 'slnt' -10;
-		}
-		&-social {
-			list-style-type: none;
-			display: flex;
-			justify-content: space-between;
-			max-width: 204px;
-			&__item svg {
-				fill: transparent;
-				rect {
-					stroke: $border-light;
-					transition: fill 0.5s, stroke 0.5s;
-				}
-				path {
-					stroke: $text-light;
-					transition: stroke 0.5s;
-				}
-				&:hover {
-					rect {
-						stroke: $text-light;
-						fill: $text-light;
-					}
-					path {
-						stroke: $text-dark;
-					}
-				}
-			}
-		}
-	}
-	&-connect {
-		flex-basis: 265px;
-		margin-right: 265px;
-		&__title {
-			font-size: 24px;
-			font-weight: 600;
-			line-height: 1.25;
-			margin-top: 33px;
-			margin-bottom: 39px;
-		}
-		&-list {
-			list-style-type: none;
-			li {
-				margin-bottom: 20px;
-			}
-			&__address, &__tel {
-				position: relative;
-				&:hover, &:focus {
-					&::after{
-						transform: scaleX(1);
-						opacity: 1;
-					}
-				}
-				&::after{
-					position: absolute;
-					pointer-events: none;
-					transition: transform 0.5s, opacity 0.5s;
-					content: '';
-					display: block;
-					width: 100%;
-					height: 2px;
-					background-color: $text-light;
-					transform: scaleX(0);
-					opacity: 0;
-				}
-			}
-			&__address, &__tel, &__worktime {
-				font-weight: 600;
-				color: $text-light;
-			}
-			&__address-icon, &__tel-icon, &__worktime-icon {
-				display: inline-block;
-				width: 20px;
-				height: 20px;
-				margin-right: 8px;
-				vertical-align: top;
-			}
-			&__address-icon {
-				background-image: url(img/header_and_footer/pin-alt.svg);
-			}
-			&__tel-icon {
-				background-image: url(img/header_and_footer/phone.svg);
-			}
-			&__worktime-icon {
-				background-image: url(img/header_and_footer/clock.svg);
-			}
-		}
-	}
-}
-
 /*Block-pages*/
-.header {
-	padding: 20px 40px 0;
+.mainbox, .favorite-coffee {
+	padding: 100px 0;
 }
 .mainbox {
-	padding: 100px 0;
 	background-image: url(img/main/hero.jpg);
 	background-size: cover;
     background-repeat: no-repeat;
     background-position: 0px -30px;
 }
-.favorite-coffee {
-	padding: 100px 0;
-}
-.about {
+.about, .mobile-app {
 	padding-bottom: 100px;
-}
-.mobile-app {
-	padding-bottom: 100px;
-}
-.footer {
-	padding: 0 40px 40px;
 }
