feat: add styling to menu

--- a/coffee-house/footer.scss
+++ b/coffee-house/footer.scss
@@ -73,6 +73,7 @@
 				}
 				&::after{
 					position: absolute;
+					top: 26px;
 					pointer-events: none;
 					transition: transform 0.5s, opacity 0.5s;
 					content: '';
