--- a/coffee-house/index.css
+++ b/coffee-house/index.css
@@ -61,7 +61,7 @@ img {
   list-style-type: none;
   display: flex;
   justify-content: space-between;
-  transform: translate(-2px, -2px);
+  transform: translate(2px, -2px);
 }
 .nav-list__item, .nav__btn-menu {
   cursor: pointer;
@@ -75,6 +75,7 @@ img {
 }
 .nav-list__item::after, .nav__btn-menu::after {
   position: absolute;
+  top: 26px;
   pointer-events: none;
   transition: transform 0.5s, opacity 0.5s;
   content: "";
@@ -87,7 +88,7 @@ img {
 }
 .nav__btn-menu {
   cursor: pointer;
-  transform: translate(-4px, -2px);
+  transform: translate(5px, -2px);
 }
 .nav__btn-menu-icon {
   display: inline-block;
@@ -95,7 +96,8 @@ img {
   height: 20px;
   background-image: url(img/header_and_footer/coffee-cup.svg);
   vertical-align: top;
-  transform: translateX(5px);
+  margin-left: 9px;
+  transform: translateX(-4px);
 }
 
 .footer {
@@ -174,6 +176,7 @@ img {
 }
 .footerbox-connect-list__address::after, .footerbox-connect-list__tel::after {
   position: absolute;
+  top: 26px;
   pointer-events: none;
   transition: transform 0.5s, opacity 0.5s;
   content: "";
@@ -395,7 +398,6 @@ img {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(1.1);
-  object-fit: cover;
   transition: transform 0.5s;
 }
 .about .grid-item__pic:hover, .about .grid-item__pic:focus {
@@ -467,3 +469,5 @@ img {
 .about, .mobile-app {
   padding-bottom: 100px;
 }
+
+/*# sourceMappingURL=index.css.map */
